# apps-platform

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.local  Dockerfile  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  mkdocs.yml  nx.json  package-lock.json  package.json  playwright.config.ts  requirements.txt  scaffold-app.sh  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml  docs.yml
apps/aneca-advisor/: angular.json  manifest.json  package.json  project.json  tsconfig.json
apps/attendance-checker/: .eslintrc.json  .gitignore  angular.json  manifest.json  package.json  project.json  tsconfig.json
apps/backend/: Dockerfile  main.py  requirements.txt
apps/exam-corrector/: .eslintrc.json  .gitignore  angular.json  manifest.json  package.json  project.json  tsconfig.spec.json
apps/frontend/: Dockerfile  angular.json  nginx.conf  package.json  tsconfig.json
apps/portal/: .eslintrc.json  Dockerfile  angular.json  nginx.conf  package.json  project.json  tsconfig.json
apps/portal-e2e/: project.json  tsconfig.json
docs/: BILLING_BACKLOG.md  GROCERY_LIST_OPTIMIZER_TECHNICAL_REVIEW.md  PARENT_REPO.md  PROFILE_BACKLOG.md  README.md
docs/ai/: context-pack.md  glossary.md  task-schema.md
docs/backlog/: GUIDELINES.md  index.md
docs/concepts/: architecture.md  infrastructure.md  parent-repo.md
docs/how-to/: coding-standards.md  (+1 more)
libs/backend-core/: project.json  pyproject.toml
libs/backend-core/backend_core/: __init__.py  auth.py
scripts/: trust-caddy-cert.sh
(+253 files in other folders)
