[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "backend-core"
version = "0.1.0"
description = "Cross-cutting backend primitives: error contract, auth helpers, config base"
requires-python = ">=3.11"
dependencies = ["flask>=3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend_core*"]
